@@ -1,0 +1,63 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko">
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+<title>JSSpec results</title>
+
+<!-- Debugger -->
+<script type="text/javascript" src="slick/assets/moobugger/mootools.js" charset="utf-8"></script>
+<script type="text/javascript" src="slick/assets/moobugger/debugger.js" charset="utf-8"></script>
+
+<!-- JSSpec -->
+<link rel="stylesheet" type="text/css" href="slick/assets/JSSpec.css" />
+<script type="text/javascript" src="slick/assets/diff_match_patch.js"></script>
+<script type="text/javascript" src="slick/assets/JSSpec.js"></script>
+<script type="text/javascript" src="slick/assets/JSSpecHelpers.js"></script>
+
+<!-- Slick -->
+<script type="text/javascript" src="../src/nwmatcher.js" charset="utf-8"></script>
+<script type="text/javascript" src="slick/nwmatcher-slick.js" charset="utf-8"></script>
+<script type="text/javascript" src="slick/assets/JSSpecHelpers_slick.js" charset="utf-8"></script>
+
+<!-- Specs -->
+<script type="text/javascript" src="slick/specs-engine_bugs.js"></script>
+<script type="text/javascript" src="slick/specs-select_exhaustive.js" charset="utf-8"></script>
+<script type="text/javascript" src="slick/specs-mock_template.js" charset="utf-8"></script>
+<script type="text/javascript" src="slick/slick_xml_specs.js" charset="utf-8"></script>
+
+<!-- Runner -->
+<script type="text/javascript" src="slick/assets/simple_request.js"></script>
+<script type="text/javascript" charset="utf-8">
+
+new Mock(/\b(xml|svg|xhtml|html)\b/i, function(specs, context){
+	
+	Describe('XML',function(){
+		it['should be XML'] = function(){
+		  console.log([context, context.document.getElementById('id_idnode')])
+			value_of(Slick.isXML(context.document)).should_be_true();
+		};
+	});
+	
+	Describe('Bugs', specsSelectorEngineBugs);
+});
+new Mock('xmlmock1', specsAssetsTemplateXML);
+
+</script>
+</head>
+<body>
+
+
+<!-- mocks -->
+
+<!--[if gt IE 8]><!-->
+<iframe onload="Mock.register('svg logo',this.contentWindow)" src="slick/tools/MooTools_Logo.svg"></iframe>
+<!-- <![endif]-->
+
+<script type="text/javascript" charset="utf-8">
+
+new Mock.Request('responseXML','slick/tools/xmlmock1.xml');
+new Mock.Request('responseXML','slick/tools/MooTools_Logo.svg');
+
+</script>
+</body>
+</html>
